// Simple test to check if our falApiKey validation fix is actually working
// This tests the core validation logic without protobuf dependencies

console.log(`üß™ Testing falApiKey Validation Fix`)
console.log(`=====================================`)

// This is the EXACT validation function from src/core/controller/ui/saveApiKey.ts
function isValidSecretKey(key) {
	const validKeys = [
		"apiKey",
		"clineAccountId",
		"openRouterApiKey",
		"awsAccessKey",
		"awsSecretKey",
		"awsSessionToken",
		"awsBedrockApiKey",
		"openAiApiKey",
		"geminiApiKey",
		"openAiNativeApiKey",
		"ollamaApiKey",
		"deepSeekApiKey",
		"requestyApiKey",
		"togetherApiKey",
		"fireworksApiKey",
		"qwenApiKey",
		"doubaoApiKey",
		"mistralApiKey",
		"liteLlmApiKey",
		"authNonce",
		"asksageApiKey",
		"xaiApiKey",
		"moonshotApiKey",
		"zaiApiKey",
		"huggingFaceApiKey",
		"nebiusApiKey",
		"sambanovaApiKey",
		"cerebrasApiKey",
		"sapAiCoreClientId",
		"sapAiCoreClientSecret",
		"groqApiKey",
		"huaweiCloudMaasApiKey",
		"basetenApiKey",
		"vercelAiGatewayApiKey",
		"difyApiKey",
		// OUR FIX: Added falApiKey to the list
		"falApiKey",
	]

	return validKeys.includes(key)
}

// Test cases
const testCases = [
	{ key: "falApiKey", expected: true, description: "Our fix - falApiKey should be valid" },
	{ key: "apiKey", expected: true, description: "Existing key should still work" },
	{ key: "invalidKey", expected: false, description: "Invalid key should be rejected" },
	{ key: "huggingFaceApiKey", expected: true, description: "HuggingFace key should work" },
]

console.log(`\nüìã Testing validation logic...`)

let passed = 0
let failed = 0

testCases.forEach(({ key, expected, description }) => {
	const result = isValidSecretKey(key)
	const success = result === expected

	if (success) {
		console.log(`‚úÖ PASS: ${description}`)
		passed++
	} else {
		console.log(`‚ùå FAIL: ${description} - Expected: ${expected}, Got: ${result}`)
		failed++
	}
})

console.log(`\nüìä Results: ${passed}/${passed + failed} tests passed`)

if (failed === 0) {
	console.log(`\nüéâ VALIDATION FIX WORKS!`)
	console.log(`   falApiKey is correctly accepted by the validation logic.`)
	console.log(`   If the UI is still failing, the issue is elsewhere in the pipeline.`)
	console.log(`   Possible causes:`)
	console.log(`   - Extension not recompiled with our changes`)
	console.log(`   - Different validation happening elsewhere`)
	console.log(`   - gRPC/protobuf serialization issues`)
	console.log(`   - VSCode extension host vs main process differences`)
} else {
	console.log(`\nüí• VALIDATION FIX FAILED!`)
	console.log(`   falApiKey is still being rejected.`)
	console.log(`   The issue is in the validation logic itself.`)
}

process.exit(failed === 0 ? 0 : 1)
